--- a/vignettes/using_scidbst.Rmd
+++ b/vignettes/using_scidbst.Rmd
@@ -11,7 +11,8 @@ library(raster)
 library(knitr)
 library(scidbst)
 
-knitr::opts_chunk$set(collapse = T, comment = "#>")
+opts_chunk$set(collapse = T, comment = "#>")
+opts_chunk$set(cache.extra = list(R.version, sessionInfo(), format(Sys.Date(), '%Y-%m')))
 outputFolder = "./assests/"
 ```
 
@@ -32,18 +33,18 @@ The data has already been loaded into scidb with its spatial and temporal refere
 As for every operation with \code{scidb} we need to establish a connection to the database first. \code{scidbconnect} will do exactly that. For SciDB versions 15.7 and greater the parameter 'protocol' and 'auth_type' are necessary to make good use of the new user authentication. Using \code{scidbst.ls} will result in a data frame object containing all the arrays that have a referenced dimension as well as their type.
 
 
-```{r, include=FALSE}
+```{r loadCredentials, include=FALSE}
 source("/home/lahn/GitHub/scidbst/vignettes/assets/credentials.R")
 ```
 
-```{r, eval=FALSE}
+```{r connect}
 scidbconnect(host=host,port=port,user=user,password=password,protocol="https",auth_type = "digest")
 scidbst.ls()
 ```
 
 Next, we will create a array proxy in a similar way as for \code{scidb} objects by using the \code{scidbst} constructor. This will create a scidb object with the specialty that the spatial and temporal extent will be calculated and the references will be set. Calling the object by name returns an overview about the array structure with the dimension indices, whereas \code{extent} will return the spatial bounding box in coordinates according to the stated coordinate reference system (\code{crs}). If the array has a temporal dimension, then \code{t.extent} will return the temporal extent denoted by a list with the minimum and maximum POSIX date.
 
-```{r, eval=FALSE}
+```{r, cache=1}
 l7_ethiopia = scidbst("L7_SW_ETHOPIA")
 l7_ethiopia
 extent(l7_ethiopia)
@@ -53,7 +54,7 @@ t.extent(l7_ethiopia)
 
 One typical task in the Geoscience domain is the creation of spatial subsets. In SciDB such subsets are created by using the dimension index values, which is complicated since it is not obvious which index refers to which real world coordinate. In this package we allow spatial subsetting with the \code{crop} method that was introduced by the \code{raster} package. Other subsetting operations that refer to the dimension index notion are \cdoe{subarray} and \code{subset}.
 
-```{r, eval=FALSE}
+```{r ehtiopiaSubset, cache=1}
 subset.extent = extent(35,36.5,6,8.5)
 ethiopia.subset = crop(l7_ethiopia,subset.extent)
 extent(ethiopia.subset)
@@ -61,14 +62,14 @@ extent(ethiopia.subset)
 
 In order to plot the image we need to further reduce the dimensionality to simply the two spatial dimensions, this can be done by \code{slice}, which sets the subset to a specific dimension value. This is interesting, when you want to extract an image at a certain point in time. In this example we take a slice from dimension 't' (the temporal dimension) and we set the selection value to a certain date, which is internally recalculated as the according dimension value. Instead of the timestamp, we could also have used the dimension index directly (e.g. 0).
 
-```{r, eval=FALSE}
+```{r ethiopiaSlice, cache=1}
 ethiopia.subset = slice(ethiopia.subset,"t","2003-07-21")
 ```
 
 Now that we have a two dimensional subset, we can either plot the image or download its values. \code{spplot} is used to for the visualization purpose and \code{readAll} or \code{getValues} can be used to obtain the values and perform additional calculations locally. \code{getValues} returns the data as a data.frame with m columns (m = number of attributes) and n rows ("number spatial x dimension values" * "number spatial y dimension values").
 
-```{r, eval=FALSE}
-values = getValues(ethiopia.subset)
+```{r ethiopiaPlot, cache=1}
+#values = getValues(ethiopia.subset)
 ethiopia.subset = readAll(ethiopia.subset)
 spplot(ethiopia.subset)
 ```
@@ -77,19 +78,19 @@ spplot(ethiopia.subset)
 ## NDVI calculation
 In this use case we will calculate the NDVI of a Landsat 7 scene in the Brazilian rainforest. To make the image smaller and calculations faster, we will first resample the image and store selected bands. Then we will calculate the NDVI for this scene. Afterwards we will again store the calculated NDVI and plot the results.
 
-```{r, eval=FALSE}
+```{r ndviNames, cache=1}
 ls.brazil.name = "LS7_BRAZIL"
 regrid.name = "LS7_BRAZIL_REGRID"
 ndvi.name = "LS7_BRAZIL_REGRID_NDVI"
 ```
 
 
-```{r, include=FALSE, eval=FALSE}
+```{r ndviDeletes, include=FALSE,eval=FALSE}
 scidbrm(regrid.name,force=TRUE)
 scidbrm(ndvi.name, force=TRUE)
 ```
 
-```{r, eval=FALSE}
+```{r ndviResolution, cache=1}
 ls7_brazil = scidbst(ls.brazil.name)
 xres(ls7_brazil)
 yres(ls7_brazil)
@@ -98,7 +99,7 @@ yres(ls7_brazil)
 We loaded the Landsat 7 scene that is located in Brazil and checked the resolution with \code{xres} and \code{yres}. The usual resolution for Landsat scenes is 30m x 30m. To make computations faster and to show case the regrid (or resample) functionality we are going the downscale the image to 300m x 300m.
 The downscaling is done using \code{regrid}. The function takes the scidbst array, the amount of cells to aggregate for each dimension and the aggregation function. The aggregation function statement we used is SciDB AFL styled syntax. We used is, because it is more reliable. As output we will get an scidbst array that has the same dimensions as the input image, but with a different granularity, as well as only the stated aggregated attributes as attributes.
 
-```{r, eval=FALSE}
+```{r ndviRegrid, cache=1}
 ls7_brazil_regrid = regrid(ls7_brazil,c(10,10,1),"avg(band1),avg(band3),avg(band4),avg(band5),avg(band8)")
 xres(ls7_brazil_regrid)
 yres(ls7_brazil_regrid)
@@ -106,7 +107,7 @@ yres(ls7_brazil_regrid)
 
 As it can be seen, we now got a scidbst array with a resolution of about 300m x 300m. As it is done in scidb, the results are neither stored nor calculated in SciDB unless the evaluation function is called explicitly. For scidb the function \code{scidbeval} is used and for scidbst arrays the according function is \code{scidbsteval}. 
 
-```{r, eval=FALSE}
+```{r ndviEval, cache=1}
 ls7_brazil_regrid = scidbsteval(ls7_brazil_regrid,regrid.name)
 ```
 
@@ -117,7 +118,7 @@ $$ NDVI = \frac{NIR-RED}{NIR+RED} $$ and $$ MDVI =\frac{MIR-NIR}{MIR+NIR} $$
 
 The calculated attributes are attached as new attributes. We will extract those new calculated attributes by using \code{project} and save them as a new scidbst array in SciDB.
 
-```{r, eval=FALSE}
+```{r ndviCalculation, cache=1}
 ls7_calc = transform(ls7_brazil_regrid, ndvi = "(band4_avg - band3_avg) / (band4_avg + band3_avg)", mdvi = "(band5_avg - band3_avg) / (band5_avg + band3_avg)")
 ls7_calc = project(ls7_calc,c("ndvi","mdvi"))
 ls7_calc = scidbsteval(ls7_calc,ndvi.name)
@@ -125,7 +126,7 @@ ls7_calc = scidbsteval(ls7_calc,ndvi.name)
 
 To show the results we will first download the data with \code{readAll} for one point in time and then we will plot each attribute.
 
-```{r, eval=FALSE}
+```{r ndviPlot, cache=1}
 ls7_calc_t0 = readAll(slice(ls7_calc,"t","2001-088"))
 spplot(getLayer(ls7_calc_t0,"ndvi"))
 spplot(getLayer(ls7_calc_t0,"mdvi"))
@@ -143,7 +144,7 @@ In this use case we highlighted the following functions:
 ## Cloud mask
 In the next use case we will perform a very simplistic approach for cloud detection to showcase the the filter/subset function. In this case we assume that clouds appear as white objects in an image. This means that in the visual light spectrum they have a whiteish color. We can filter the array for all cells that have values around the maximum data type value. In the Brazilian Landsat scene this will relate to selecting each cell that has a value of 254 or 255 for bands 1 to 3.
 
-```{r, eval=FALSE}
+```{r cloudMask, cache=1}
 ls7_brazil = scidbst("LS7_BRAZIL")
 sliced.regridded = regrid(slice(ls7_brazil,"t",0),c(10,10),"avg(band1),avg(band2),avg(band3)")
 sliced.regridded = readAll(sliced.regridded)
@@ -173,7 +174,7 @@ In this use case we are going to highlight the use of two aggregation functions 
 
 As a result we will get a time series, which is coerced into a \code{xts} object and plotted afterwards.
 
-```{r}
+```{r trmmAggregation, cache=1}
 trmm = scidbst("TRMM3B42_DAILY")
 trmm.prec = project(trmm,"band5")
 
