modifications: - prototyping scidbst class - allowing NULL values for scidbst class slots srs,trs,textent,extent - problem fix with nrow and ncol, when coordinate bounds are bigger than the actual image

--- a/inst/doc/using_scidbst.Rmd
+++ b/inst/doc/using_scidbst.Rmd
@@ -16,7 +16,7 @@ library(scidbst)
 
 opts_chunk$set(collapse = T, comment = "#>")
 opts_chunk$set(cache.extra = list(R.version, sessionInfo(), format(Sys.Date(), '%Y-%m')))
-opts_chunk$set(out.width="800px",out.height="650px")
+opts_chunk$set(fig.width=10, fig.height=8)
 outputFolder = "./assests/"
 ```
 
