--- a/vignettes/using_scidbst.Rmd
+++ b/vignettes/using_scidbst.Rmd
@@ -17,7 +17,7 @@ library(scidbst)
 opts_chunk$set(collapse = T, comment = "#>")
 opts_chunk$set(cache.extra = list(R.version, sessionInfo(), format(Sys.Date(), '%Y-%m')))
 opts_chunk$set(fig.width=10, fig.height=8)
-outputFolder = "./assests/"
+outputFolder = "/assests/"
 ```
 
 ## Introduction
@@ -44,7 +44,8 @@ source("/home/lahn/GitHub/scidbst/vignettes/assets/credentials.R")
 
 ```{r connect}
 scidbconnect(host=host,port=port,user=user,password=password,protocol="https",auth_type = "digest")
-scidbst.ls()
+array.list = scidbst.ls()
+array.list
 ```
 
 Next, we will create a array proxy in a similar way as for \code{scidb} objects by using the \code{scidbst} constructor. This will create a scidb object with the specialty that the spatial and temporal extent will be calculated and the references will be set. Calling the object by name returns an overview about the array structure with the dimension indices, whereas \code{extent} will return the spatial bounding box in coordinates according to the stated coordinate reference system (\code{crs}). If the array has a temporal dimension, then \code{t.extent} will return the temporal extent denoted by a list with the minimum and maximum POSIX date.
@@ -90,9 +91,14 @@ ndvi.name = "LS7_BRAZIL_REGRID_NDVI"
 ```
 
 
-```{r ndviDeletes, include=FALSE,eval=FALSE}
-scidbrm(regrid.name,force=TRUE)
-scidbrm(ndvi.name, force=TRUE)
+```{r ndviDeletes, include=FALSE}
+if (any(array.list$name == regrid.name)) {
+  scidbrm(regrid.name,force=TRUE)
+}
+
+if (any(array.list$name == ndvi.name)) {
+  scidbrm(ndvi.name, force=TRUE)
+}
 ```
 
 ```{r ndviResolution, cache=1}
@@ -190,6 +196,48 @@ te = textent(as.POSIXct("2010-01-01"),as.POSIXct("2013-01-01"))
 tsubset = subarray(daily.avg.ethiopia,limits=te,between=TRUE)
 ts = as(tsubset,"xts")
 plot(ts,major.ticks="months",minor.ticks=FALSE,main="Average precipitation for Ethiopia Landsat scene from 2010 to 2013")
+```
+
+## Joining spatial arrays with different resolution
+In this use case we show how to combine the attributes of two spatial arrays. As input arrays we use the Landsat NDVI dataset of Ethiopia and the SRTM dataset of Africa. As a requirement both datasets need to share the same spatial reference system (in this case WGS84 with latitude and longitude coordinates). We use the landsat scene as the main extent and therefore we create a spatial subset of the SRTM dataset using the spatial extent of the Landsat 7 slice.
+
+```{r joinArraysPreperation, cache=1}
+joined.name = "join_ls7ndvi_srtm_ethiopia"
+
+ls7_ethiopia = scidbst("L7_SW_ETHOPIA")
+srtm = scidbst("SRTM_AFRICA")
+ls7.slice = slice(ls7_ethiopia,"t",7)
+
+extent(ls7.slice)
+extent(srtm)
+srtm.sub = crop(srtm,ls7.slice)
+```
+
+```{r joinArraysResolution, cache=1}
+res(ls7.slice)
+res(srtm.sub)
+```
+
+We can see that the spatial resolution of this two arrays differs, which makes it difficult to join cells approriately. Internally the join function will use the array with the lower resolution as target and resamples the higher resolution array with an aggregation function.
+
+```{r removeJoined, include=FALSE}
+
+if (any(array.list$name == joined.name)) {
+  scidbrm(joined.name,force=TRUE)
+}
+```
+
+```{r joinExecution, cache=1}
+joined.array = join(ls7.slice,srtm.sub,storeTemp=TRUE,name=joined.name)
+joined.array.brick = as(joined.array,"RasterBrick")
+# joined.array.brick = writeRaster(joined.array.brick,filename="joined_slice.tif",format="GTiff")
+```
+
+To reuse arrays that otherwise need to be recalculated on the fly, we set the 'storeTemp' parameter to TRUE, which creates temporary arrays during the join process. Last, the 'name' specifies the array name under which the joined array can be found.
+
+```{r joinVisual, cache=1}
+spplot(subset(joined.array.brick,1)/max(values(subset(joined.array.brick,1)),na.rm=TRUE),main="Landsat NDVI (regridded)")
+spplot(subset(joined.array.brick,2),main="SRTM heights in m")
 ```
 
 ## References
